@@ -111,4 +111,6 @@ public class Const {
     public static final String PREF_KEY_HB_ACK = "HeartBeatAck";
     public static final String PREF_KEY_PROCESS_SDL_HB_ACK = "ProcessSDLHeartBeatAck";
     public static final String PREF_KEY_RECONNECT_ON_HB_TIMEOUT = "ReconnectOnHBTimeOut";
+
+    public static final String PREF_KEY_PROCESS_POLICY_TABLE_SNAPSHOT = "ProcessPolicyTableSnapshot";
 }
