@@ -10,18 +10,16 @@ import android.view.Menu;
  */
 public class MenuConstants {
 
-    public static final int MENU_ADD_SESSION = Menu.FIRST;
-    public static final int MENU_PROXY_START = Menu.FIRST + 1;
-    public static final int MENU_XML_TEST = Menu.FIRST + 2;
-    public static final int MENU_POLICIES_TEST = Menu.FIRST + 3;
-    public static final int MENU_TOGGLE_CONSOLE = Menu.FIRST + 4;
-    public static final int MENU_CLEAR = Menu.FIRST + 5;
-    public static final int MENU_EXIT = Menu.FIRST + 6;
-    public static final int MENU_TOGGLE_MEDIA = Menu.FIRST + 7;
-    public static final int MENU_CLOSE_SESSION = Menu.FIRST + 8;
-    public static final int MENU_CLEAR_FUNCTIONS_USAGE = Menu.FIRST + 9;
-    public static final int MENU_WAKE_LOCK = Menu.FIRST + 10;
-    public static final int MENU_SET_UP_POLICY_FILES = Menu.FIRST + 11;
-    public static final int MENU_HASH_ID_SETUP = Menu.FIRST + 12;
-    public static final int MENU_FEEDBACK = Menu.FIRST + 13;
+    public static final int MENU_XML_TEST              = Menu.FIRST + 1;
+    public static final int MENU_POLICIES_TEST         = Menu.FIRST + 2;
+    public static final int MENU_TOGGLE_CONSOLE        = Menu.FIRST + 3;
+    public static final int MENU_CLEAR                 = Menu.FIRST + 4;
+    public static final int MENU_EXIT                  = Menu.FIRST + 5;
+    public static final int MENU_TOGGLE_MEDIA          = Menu.FIRST + 6;
+    public static final int MENU_CLOSE_SESSION         = Menu.FIRST + 7;
+    public static final int MENU_CLEAR_FUNCTIONS_USAGE = Menu.FIRST + 8;
+    public static final int MENU_WAKE_LOCK             = Menu.FIRST + 9;
+    public static final int MENU_SET_UP_POLICY_FILES   = Menu.FIRST + 10;
+    public static final int MENU_HASH_ID_SETUP         = Menu.FIRST + 11;
+    public static final int MENU_FEEDBACK              = Menu.FIRST + 12;
 }
